--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: Aakarsh Sharan # the main title
 
-tagline: SharanAki Byte   # it will display as the subtitle
+tagline:  The_SharanAki_Byte   # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A term from programming and security, sounds cool and minimal.
