--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ social:
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     - https://www.linkedin.com/in/aakarsh-sharan-9249b6125/
-
+  rss: false
 # Site Verification Settings
 webmaster_verifications:
   google: # fill in your Google verification code
